Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3921

HTTP/2 send protocol error on invalid data frame

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.1, 6.1.0
    • HTTP/2
    • None

    Description

      Data frames should have a none zero streamid.

      (gdb) up
      #2  0x000000000063fe61 in Http2ClientSession::main_event_handler (this=0x2af8c0b28a00, event=100, edata=0x2af864f80848) at Http2ClientSession.cc:222
      222	in Http2ClientSession.cc
      (gdb) p current_hdr
      $7 = {length = 0, type = 0 '\000', flags = 0 '\000', streamid = 0}
      

      Attachments

        Issue Links

          Activity

            People

              bcall Bryan Call
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: