TS-3921: HTTP/2 send protocol error on invalid data frame

(cherry picked from commit 48fadc42402ddd213f1b30b6639f2334d3d3cf07)